--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@picocss/pico": "1.5.2",
     "bootstrap": "5.1.3",
     "date-fns": "2.28.0",
+    "lodash": "4.17.21",
     "react": "18.0.0",
     "react-bootstrap": "2.4.0",
     "react-day-picker": "8.0.5",
